Fixed navbar on iOS

--- a/geneever/style.css
+++ b/geneever/style.css
@@ -75,10 +75,6 @@ p {font-size:20px; font-weight:400;}
     justify-content:center;
     height:10em;
   } */
-
-  .top-bar .nav-bar {
-    padding-top:15px;
-  }
 }
 
 #learn-more {
@@ -133,10 +129,6 @@ p {font-size:20px; font-weight:400;}
   background-color:blue;
   min-width:24rem;
 }
-
-
-
-
 
 
 
@@ -230,7 +222,7 @@ nav {
     width: 100%;
     flex-direction: column;
     clip-path: circle(100px at 90% -10%);
-    /* -webkit-clip-path: circle(100px at 90% -10%); */
+    -webkit-clip-path: circle(100px at 90% -10%);
     transition: all 1s ease-out;
     pointer-events: none;
   }
